--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -97,6 +97,9 @@ textarea{
 @import "action";
 @import "form-action";
 @import "main4";
+@import "main5";
+@import "main6";
+@import "main8";
 
 @import "footer";
 @import "gmap";
