--- a/css/all.css
+++ b/css/all.css
@@ -737,6 +737,77 @@ textarea:focus {
   line-height: 1.2;
 }
 
+.form-popup_wrap__question {
+  width: 284px;
+}
+.form-popup_title {
+  font-family: proximanova_bold;
+  text-align: center;
+  color: #19254b;
+  font-size: 16px;
+  text-transform: uppercase;
+  padding: 36px 0px 20px 0px;
+  margin: 0px 0px 25px 0px;
+  position: relative;
+}
+.form-popup_title:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 50%;
+  margin: 0px 0px 0px -17px;
+  bottom: 0px;
+  width: 35px;
+  height: 3px;
+  background-color: #19254b;
+}
+.form-popup_inner {
+  padding: 0px 0px 17px 0px;
+  text-align: center;
+}
+.form-popup_inner input {
+  font-size: 16px;
+  width: 199px;
+  height: 44px;
+  border: 1px solid #c2c2c2;
+  margin: 0px;
+  padding: 0px 22px 0px 22px;
+}
+.form-popup_inner textarea {
+  font-size: 16px;
+  width: 199px;
+  height: 77px;
+  border: 1px solid #c2c2c2;
+  margin: 0px;
+  padding: 11px 22px 0px 22px;
+}
+.form-popup_button {
+  padding: 9px 0px 0px 0px;
+  text-align: center;
+}
+.form-popup_button input {
+  width: 245px;
+  height: 56px;
+  border: none;
+  background-color: #e74c3c;
+  font-family: proximanova_bold;
+  color: #ffffff;
+  font-size: 20px;
+  text-transform: uppercase;
+  padding: 1px 0px 0px 0px;
+}
+.form-popup_button input:hover {
+  cursor: pointer;
+}
+.form-popup_descr {
+  font-family: proximanova_light;
+  color: #666666;
+  font-size: 14px;
+  text-align: center;
+  padding: 15px 20px 30px 20px;
+  line-height: 1.2;
+}
+
 /*
     Colorbox Core Style:
     The following CSS is consistent between example themes and should not be altered.
@@ -963,10 +1034,7 @@ textarea:focus {
 }
 
 .app {
-  position: relative;
-}
-.app_wrap {
-  position: fixed;
+  position: absolute;
   z-index: 5;
   top: 470px;
   left: 0px;
@@ -2006,6 +2074,70 @@ textarea:focus {
 }
 .main5_link:hover {
   text-decoration: underline;
+}
+
+.tip-green {
+  z-index: 1000;
+  text-align: left;
+  border: 1px solid #19254b;
+  padding: 7px 10px;
+  min-width: 50px;
+  max-width: 300px;
+  color: #860404;
+  background-color: #ffffff;
+  /**
+   * - If you set a background-image, border/padding/background-color will be ingnored.
+   *   You can set any padding to .tip-inner instead if you need.
+   * - If you want a tiled background-image and border/padding for the tip,
+   *   set the background-image to .tip-inner instead.
+   */
+}
+
+.tip-green .tip-inner {
+  font-family: proximanova;
+  font-size: 16px;
+  color: #373737;
+}
+
+/* Configure an arrow image - the script will automatically position it on the correct side of the tip */
+.tip-green .tip-arrow-top {
+  margin-top: -10px;
+  margin-left: 6px;
+  top: 0;
+  left: 0;
+  width: 22px;
+  height: 32px;
+  background: url("../image/tooltip.png") no-repeat;
+}
+
+.tip-green .tip-arrow-right {
+  margin-top: 6px;
+  margin-left: 0;
+  top: 0;
+  left: 100%;
+  width: 22px;
+  height: 32px;
+  background: url("../image/tooltip.png") no-repeat;
+}
+
+.tip-green .tip-arrow-bottom {
+  margin-top: 0;
+  margin-left: 6px;
+  top: 100%;
+  left: 0;
+  width: 22px;
+  height: 32px;
+  background: url("../image/tooltip.png") no-repeat;
+}
+
+.tip-green .tip-arrow-left {
+  margin-top: 6px;
+  margin-left: -10px;
+  top: 60px;
+  left: -12px;
+  width: 22px;
+  height: 32px;
+  background: url("../image/tooltip.png") no-repeat;
 }
 
 .main6 {
