--- a/sass/_title.scss
+++ b/sass/_title.scss
@@ -3,6 +3,7 @@
   min-height: 259px;
   padding: 61px 0px 61px 0px;
   position: relative;
+  overflow: hidden;
   &.bg-loaded{
     @include def-opacity(1);
   }
