--- a/sass/_main4.scss
+++ b/sass/_main4.scss
@@ -4,6 +4,7 @@
   &.bg-loaded{
     @include def-opacity(1);
   }*/
+  padding: 40px 0px 0px 0px;
   &_head{
     font-size: 30px;
     color: #373737;
