--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -194,6 +194,7 @@ textarea{
 //**********************************************************/
 @import "placeholder";
 @import "title";
+@import "main-pager";
 
 @import "button";
 @import "header";
