--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -977,7 +977,34 @@ textarea:focus {
   line-height: 1.2;
 }
 
+.form-popup {
+  /*input[type="checkbox"]:checked + label {
+    border-color: #3498db;
+  }*/
+}
 .form-popup_wrap__question {
+  width: 284px;
+}
+.form-popup_wrap__buh {
+  width: 320px;
+}
+.form-popup_wrap__callback {
+  width: 284px;
+}
+.form-popup_wrap__bonus {
+  width: 502px;
+}
+.form-popup_wrap__bonus .form-popup_title {
+  margin: 0px 0px 29px 0px;
+}
+.form-popup_wrap__bonus .form-popup_button {
+  padding: 5px 0 0;
+}
+.form-popup_wrap__info {
+  width: 316px;
+  padding: 0px 0px 23px 0px;
+}
+.form-popup_wrap__tarif {
   width: 284px;
 }
 .form-popup_title {
@@ -1046,6 +1073,38 @@ textarea:focus {
   text-align: center;
   padding: 15px 20px 30px 20px;
   line-height: 1.2;
+}
+.form-popup_info {
+  padding: 0px 26px 0px 26px;
+  margin: 0px 0px 12px 0px;
+  font-size: 16px;
+  color: #373737;
+}
+.form-popup_checkbox {
+  padding: 0px 60px 0px 60px;
+  margin: 0px 0px 32px 0px;
+}
+.form-popup input[type="checkbox"] {
+  display: none;
+}
+.form-popup input[type="checkbox"] + label {
+  font-size: 16px;
+  color: #373737;
+  cursor: pointer;
+  position: relative;
+}
+.form-popup input[type="checkbox"] + label::before {
+  content: "";
+  display: inline-block;
+  height: 19px;
+  width: 24px;
+  position: absolute;
+  top: 0px;
+  left: -35px;
+  background: url("../image/calc-form-check.png") no-repeat;
+}
+.form-popup input[type="checkbox"]:checked + label::before {
+  background-position: -24px 0px;
 }
 
 /*
@@ -2661,6 +2720,121 @@ textarea:focus {
 }
 .main8 .bx-wrapper .bx-controls-direction a.disabled {
   display: none;
+}
+
+.block-form {
+  height: 360px;
+  position: relative;
+  overflow: hidden;
+  margin: 0px 0px 0px 0px;
+  /*&:hover{
+    .block-form_layer{
+      background-position: 100% 100%;
+    }
+  }*/
+}
+.block-form_title {
+  color: #ffffff;
+  font-size: 26px;
+  position: relative;
+  padding: 0px 0px 35px 0px;
+}
+.block-form_title:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 18px;
+  margin: 0px 0px 0px -17px;
+  top: -21px;
+  width: 44px;
+  height: 2px;
+  background-color: #ffffff;
+}
+.block-form_layer {
+  width: 100%;
+  height: 100%;
+  background: url("../image/big-2120-1410.jpg") no-repeat;
+  background-size: cover;
+  position: absolute;
+  z-index: 1;
+  -webkit-transition: background-position 2s ease-in-out;
+  -moz-transition: background-position 2s ease-in-out;
+  -o-transition: background-position 2s ease-in-out;
+  -ms-transition: background-position 2s ease-in-out;
+  transition: background-position 2s ease-in-out;
+}
+.block-form_wrap {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  * zoom: 1;
+  display: block;
+  position: relative;
+  z-index: 2;
+}
+.block-form_wrap:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+* html .block-form_wrap {
+  height: 1%;
+}
+.block-form_left {
+  width: 675px;
+  float: left;
+  padding: 68px 0px 0px 0px;
+}
+.block-form_right {
+  padding: 46px 0px 0px 720px;
+}
+.block-form_descr {
+  font-family: proximanova_light;
+  font-size: 14px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 1.1;
+  padding: 0px 0px 37px 0px;
+}
+.block-form_inner {
+  padding: 0px 0px 11px 0px;
+  text-align: center;
+}
+.block-form_inner input {
+  font-size: 16px;
+  width: 199px;
+  height: 44px;
+  border: 1px solid #c2c2c2;
+  margin: 0px;
+  padding: 0px 22px 0px 22px;
+}
+.block-form_inner textarea {
+  font-size: 16px;
+  width: 631px;
+  height: 164px;
+  border: 1px solid #c2c2c2;
+  margin: 0px;
+  padding: 11px 22px 0px 22px;
+}
+.block-form_button {
+  padding: 9px 0px 0px 0px;
+}
+.block-form_button input {
+  width: 245px;
+  height: 54px;
+  border: 2px solid #ffffff;
+  background-color: transparent;
+  font-family: proximanova_bold;
+  color: #ffffff;
+  font-size: 20px;
+  text-transform: uppercase;
+  padding: 1px 0px 0px 0px;
+}
+.block-form_button input:hover {
+  cursor: pointer;
 }
 
 .footer {
