--- a/sass/_title.scss
+++ b/sass/_title.scss
@@ -16,11 +16,13 @@
     padding: 43px 0px 43px 0px;
     background: url('../image/title-main-1920.jpg') 50% no-repeat;
     background-size: cover;
-    /*@include def-opacity(0);
-    @include def-transition(opacity, 0.2s);*/
   }
   &__info{
     background: url('../image/title-info-1920.jpg') 50% no-repeat;
+    background-size: cover;
+  }
+  &__about{
+    background: url('../image/title-about-1920.jpg') 50% no-repeat;
     background-size: cover;
   }
   &_h1{
