--- a/sass/_block-form.scss
+++ b/sass/_block-form.scss
@@ -9,17 +9,19 @@
     }
   }*/
   &_title{
+    width: 675px;
+    float: left;
+    padding: 68px 0px 35px 0px;
     color: #ffffff;
     font-size: 26px;
     position: relative;
-    padding: 0px 0px 35px 0px;
     &:before{
       content: " ";
       display: block;
       position: absolute;
       left: 18px;
       margin: 0px 0px 0px -17px;
-      top: -21px;
+      top: 47px;
       width: 44px;
       height: 2px;
       background-color: #ffffff;
@@ -35,18 +37,25 @@
     @include def-transition(background-position, 2s);
   }
   &_wrap{
-    @include clearfix();
-    
     position: relative;
     z-index: 2;
+  }
+  &_top{
+    @include clearfix();
+  }
+  &_bottom{
+    @include clearfix();
   }
   &_left{
     width: 675px;
     float: left;
-    padding: 68px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
   }
   &_right{
-    padding: 46px 0px 0px 720px;
+    float: right;
+    width: 230px;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 50px;
   }
   &_descr{
     font-family: $light;
@@ -54,14 +63,16 @@
     color: #ffffff;
     text-align: center;
     line-height: 1.1;
-    padding: 0px 0px 37px 0px;
+    padding: 46px 0px 37px 0px;
+    float: right;
+    width: 230px;
   }
   &_inner{
     padding: 0px 0px 11px 0px;
     text-align: center;
     input{
       font-size: 16px;
-      width: 199px;
+      width: 184px;
       height: 44px;
       border: 1px solid #c2c2c2;
       margin: 0px;
@@ -69,7 +80,7 @@
     }
     textarea{
       font-size: 16px;
-      width: 631px;
+      width: 629px;
       height: 164px;
       border: 1px solid #c2c2c2;
       margin: 0px;
@@ -79,7 +90,7 @@
   &_button{
     padding: 9px 0px 0px 0px;
     input{
-      width: 245px;
+      width: 230px;
       height: 54px;
       border: 2px solid #ffffff;
       background-color: transparent;
