--- a/sass/_mymix.scss
+++ b/sass/_mymix.scss
@@ -284,7 +284,6 @@ small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
@@ -303,8 +302,15 @@ ol, ul {
   list-style: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+  //border-collapse: collapse;
+  //border-spacing: 0;
+}
+table, tr, th, td, table, caption, tbody, tfoot, thead {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
 }
 caption, th, td {
   text-align: left;
