--- a/css/all.css
+++ b/css/all.css
@@ -144,10 +144,23 @@ body {
 textarea {
   resize: none;
   box-shadow: none;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 0px;
+  border-radius: 0px;
 }
 
 input {
   box-shadow: none;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 0px;
+  border-radius: 0px;
+}
+
+button, input[type="reset"], input[type="button"], input[type="submit"] {
+  box-shadow: none;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 0px;
+  border-radius: 0px;
 }
 
 strong, b {
@@ -380,6 +393,10 @@ textarea:focus {
   background: url("../image/title-about-1920.jpg") 50% no-repeat;
   background-size: cover;
 }
+.title__contact {
+  background: url("../image/title-contact-1920.jpg") 50% no-repeat;
+  background-size: cover;
+}
 .title_h1 {
   font-family: proximanova_bold;
   font-size: 38px;
@@ -470,6 +487,94 @@ textarea:focus {
 }
 .main-pager_item__active .main-pager_label {
   visibility: visible;
+}
+
+.mypager {
+  padding: 44px 0px 48px 0px;
+  text-align: center;
+}
+.mypager_list {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  display: block;
+  display: inline-block;
+  margin: 0 auto;
+  position: relative;
+}
+.mypager_list:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+.mypager_item {
+  float: left;
+  display: block;
+  width: 21px;
+  margin: 0px 5px 0px 5px;
+  padding: 2px 0px 2px 0px;
+  font-size: 16px;
+}
+.mypager_item__current {
+  color: #ffffff;
+  background-color: #3498db;
+}
+.mypager_item a {
+  color: #373737;
+  font-size: 16px;
+  text-decoration: none;
+}
+.mypager_item a:visited {
+  color: #373737;
+}
+.mypager_item a:hover {
+  color: #3498db;
+}
+.mypager_item a:active {
+  color: #373737;
+}
+.mypager_item a:focus {
+  color: #373737;
+}
+.mypager_item.mypager-prev, .mypager_item.mypager-next {
+  padding: 3px 0px 0px 0px;
+}
+.mypager_item.mypager-prev a, .mypager_item.mypager-next a {
+  display: block;
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  width: 8px;
+  height: 13px;
+  background: url("../image/arrows-pager.png") no-repeat;
+  margin: 0 auto;
+}
+.mypager_item.mypager-prev a:hover {
+  background-position: 0px -13px;
+}
+.mypager_item.mypager-next a {
+  background-position: -8px 0px;
+}
+.mypager_item.mypager-next a:hover {
+  background-position: -8px -13px;
+}
+.mypager .ajax-progress {
+  position: absolute;
+  top: 11px;
+  left: -15px;
+}
+.mypager .ajax-progress .throbber {
+  background: transparent url("../image/ajax-loader.gif") no-repeat 0px 0px;
+  /* tweak this according to your gif */
+  float: left;
+  height: 15px;
+  /* tweak this according to your gif */
+  width: 15px;
+  /* tweak this according to your gif */
+  margin: 0px;
 }
 
 .button {
@@ -903,6 +1008,15 @@ textarea:focus {
   font-size: 20px;
   text-transform: uppercase;
   padding: 1px 0px 0px 0px;
+  background-color: #3498db;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#3498db), to(#3498db));
+  /* Saf4+, Chrome */
+  background-image: -webkit-linear-gradient(top, #3498db, #3498db);
+  background-image: -moz-linear-gradient(top, #3498db, #3498db);
+  background-image: -ms-linear-gradient(top, #3498db, #3498db);
+  background-image: -o-linear-gradient(top, #3498db, #3498db);
+  background-image: linear-gradient(top, #3498db, #3498db);
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#3498db', EndColorStr='#3498db');
 }
 .form-discount_button input:hover {
   cursor: pointer;
@@ -1033,6 +1147,15 @@ textarea:focus {
   font-size: 20px;
   text-transform: uppercase;
   padding: 1px 0px 0px 0px;
+  background-color: #e74c3c;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#e74c3c), to(#e74c3c));
+  /* Saf4+, Chrome */
+  background-image: -webkit-linear-gradient(top, #e74c3c, #e74c3c);
+  background-image: -moz-linear-gradient(top, #e74c3c, #e74c3c);
+  background-image: -ms-linear-gradient(top, #e74c3c, #e74c3c);
+  background-image: -o-linear-gradient(top, #e74c3c, #e74c3c);
+  background-image: linear-gradient(top, #e74c3c, #e74c3c);
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#e74c3c', EndColorStr='#e74c3c');
 }
 .form-popup_button input:hover {
   cursor: pointer;
@@ -2726,7 +2849,7 @@ textarea:focus {
 }
 .user-content p {
   font-family: proximanova_light;
-  font-size: 18px;
+  font-size: 16px;
   color: #373737;
   line-height: 1.2;
   margin: 0px 0px 22px 0px;
@@ -2740,7 +2863,7 @@ textarea:focus {
 .user-content a {
   color: #373737;
   font-family: proximanova_light;
-  font-size: 18px;
+  font-size: 16px;
 }
 .user-content a:visited {
   color: #373737;
@@ -2756,12 +2879,14 @@ textarea:focus {
 }
 .user-content ul {
   padding: 0px 0px 0px 30px;
+  list-style-image: url("../image/list.png");
   list-style-type: disc;
 }
 .user-content li {
   font-family: proximanova_light;
   font-size: 16px;
   color: #373737;
+  margin: 0px 0px 28px 0px;
 }
 
 .block-form {
@@ -2896,6 +3021,230 @@ textarea:focus {
 }
 .block-form_button input:hover {
   cursor: pointer;
+}
+
+.contacts {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  display: block;
+  padding: 8px 0px 88px 0px;
+}
+.contacts:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+.contacts_item {
+  width: 25%;
+  float: left;
+}
+.contacts_image {
+  padding: 0px 0px 17px 0px;
+}
+.contacts_text p {
+  font-size: 16px;
+  color: #373737;
+  margin: 0px 0px 5px 0px;
+}
+
+.infos {
+  margin-top: -2px;
+}
+.infos_item {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  display: block;
+  margin: 0px 0px 47px 0px;
+}
+.infos_item:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+.infos_wrap {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #3498db;
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  opacity: 0;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+}
+.infos_image {
+  display: block;
+  width: 300px;
+  height: 202px;
+  float: left;
+  padding: 2px 0px 0px 0px;
+  position: relative;
+  -webkit-box-shadow: inset 0px -5px 0px 0px #3498db;
+  -moz-box-shadow: inset 0px -5px 0px 0px #3498db;
+  box-shadow: inset 0px -5px 0px 0px #3498db;
+}
+.infos_image img {
+  display: block;
+  position: relative;
+  z-index: -1;
+}
+.infos_image:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: 2px;
+  left: 0px;
+  width: 100%;
+  height: 198px;
+  background-color: #3498db;
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  opacity: 0;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+}
+.infos_image:hover:before {
+  -webkit-opacity: 0.5;
+  -moz-opacity: 0.5;
+  opacity: 0.5;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+}
+.infos_text {
+  padding: 0px 0px 0px 321px;
+}
+.infos_title {
+  display: block;
+  font-family: proximanova_bold;
+  font-size: 18px;
+  line-height: 1.1;
+  color: #373737;
+  text-transform: uppercase;
+  text-decoration: none;
+  position: relative;
+  margin: 0px 0px 10px 0px;
+  padding: 0px 0px 17px 0px;
+}
+.infos_title:visited {
+  color: #373737;
+}
+.infos_title:hover {
+  color: #3498db;
+}
+.infos_title:active {
+  color: #373737;
+}
+.infos_title:focus {
+  color: #373737;
+}
+.infos_title:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 1px;
+  bottom: 0px;
+  width: 40px;
+  height: 3px;
+  background-color: #3498db;
+}
+.infos_descr {
+  font-family: proximanova_light;
+  color: #373737;
+  font-size: 16px;
+  line-height: 1.3;
+  height: 141px;
+}
+.infos_link {
+  float: right;
+  color: #373737;
+  font-family: proximanova_italic;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 0px 21px 0px 0px;
+  position: relative;
+}
+.infos_link:visited {
+  color: #373737;
+}
+.infos_link:hover {
+  color: #373737;
+}
+.infos_link:active {
+  color: #373737;
+}
+.infos_link:focus {
+  color: #373737;
+}
+.infos_link:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  right: 0px;
+  top: 1px;
+  width: 13px;
+  height: 14px;
+  background: url("../image/arrow-link.png") no-repeat;
+}
+.infos_link:hover {
+  text-decoration: underline;
+}
+
+.next_title {
+  font-family: proximanova_bold;
+  font-size: 18px;
+  color: #373737;
+  text-transform: uppercase;
+  margin: -12px 0px 32px 0px;
+}
+.next_link {
+  font-family: proximanova_italic;
+  font-size: 18px;
+  color: #373737;
+  text-decoration: none;
+  display: block;
+  padding: 0px 0px 0px 28px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  margin: 0px 0px 20px 0px;
+}
+.next_link:visited {
+  color: #373737;
+}
+.next_link:hover {
+  color: #3498db;
+}
+.next_link:active {
+  color: #373737;
+}
+.next_link:focus {
+  color: #373737;
+}
+.next_link:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: 4px;
+  left: 2px;
+  width: 10px;
+  height: 11px;
+  background: url("../image/arrow-next.png") no-repeat;
+}
+.next_link:hover {
+  padding: 0px 0px 0px 49px;
+}
+.next_link:hover:before {
+  background-position: -10px 0px;
 }
 
 .footer {
